# workflow-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: example_workflow.json  run_example.py
tests/: conftest.py  test_engine.py  test_models.py  test_schema.py
workflow_engine/: __init__.py  engine.py  exceptions.py  models.py  schema.py
